# plasma-workspace

ksplash/ksplashqml/: splashwindow.cpp
lookandfeel/contents/lockscreen/: LockScreenUi.qml
shell/: desktopview.cpp  desktopview.h  shellcorona.cpp  shellcorona.h
shell/packageplugins/: CMakeLists.txt
shell/packageplugins/splashscreen/: CMakeLists.txt  plasma-packagestructure-splashscreen.desktop  splashscreen.cpp  splashscreen.h
wallpapers/image/imagepackage/contents/ui/: main.qml
